# GenAI

./: .gitignore  LICENSE  main.py  pyproject.toml
.github/workflows/: llm-eval.yml
chatbot/: pyproject.toml
chatbot/app/: main.py
database/: db.py
llm-eval-project/: evaluator.py  main.py  models.py  prompt_dataset_manager.py  pyproject.toml  report.py  report_generator.py  report_storage.py  slack_notifier.py  yaml_manager.py
llm-eval-project/.github/workflows/: llm-eval.yml
llm-eval-project/dataset/: v1.yaml  v2.yaml
llm-eval-project/prompts/: v1.yaml
llm-eval-project/reports/: latest.json
llm-eval-project/reports/history/: 20260708_080059_v1.json  20260709_062115_v1.json
multi-model-intelligent-routing-system/: llm_registry.py  main.py  model.py  request_handler.py
multi-model-intelligent-routing-system/classifier/: classifier.pkl  dataset.py  feature_extractor.py  predict.py  train.py
multi-model-intelligent-routing-system/prompts/: complex.yaml  moderate.yaml  simple.yaml
multi_model_intelligent_routing_system/: api.py  llm_registry.py  model.py
multi_model_intelligent_routing_system/classifier/: predict.py
multi_model_intelligent_routing_system/prompts/: complex.yaml  moderate.yaml
