[project]
name = "llm-eval-project"
version = "0.1.0"

requires-python = ">=3.12,<4.0"

dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "pydantic (>=2.11.0,<3.0.0)",
    "langchain (>=1.3.2,<2.0.0)",
    "langchain-core (>=1.0.0,<2.0.0)",
    "langchain-huggingface (>=1.2.2,<2.0.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "huggingface-hub (>=0.35.0,<1.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiohttp (>=3.14.1,<4.0.0)",
    "langchain-groq (>=1.1.3,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"